# aiousb-alpha

./: README.md
aiousb/: aiousb-private.h  aiousb.cpp
include/: accesio_usb_ioctl.h  aiousb.h
module/: accesio_usb.c
samples/: AiousbDioStreamInSample.cpp  AiousbDioStreamOutSample.cpp  CMakeLists.txt
test/: aiousb-adc-getscanv-test.cpp  aiousb-aio16-16f-test.cpp
